@@ -1,6 +1,7 @@
 #
 # General configuration
 #
+# start-default-seat = TRUE to always start one seat if none are defined in the configuration
 # greeter-user = User to run greeter as
 # minimum-display-number = Minimum display number to use for X servers
 # minimum-vt = First VT to run displays on
@@ -8,9 +9,9 @@
 # log-directory = Directory to log information to
 # run-directory = Directory to put running state in
 # cache-directory = Directory to cache to
-# seats = list of seats to start displays on
 #
 [LightDM]
+#start-default-seat=true
 #greeter-user=lightdm
 #minimum-display-number=0
 #minimum-vt=7
@@ -18,7 +19,6 @@
 #log-directory=/var/log/lightdm
 #run-directory=/var/run/lightdm
 #cache-directory=/var/cache/lightdm
-seats=Seat0
 
 #
 # Seat defaults
@@ -60,9 +60,10 @@ seats=Seat0
 #
 # Seat configuration
 #
-# Can override any of the options from defaults e.g. greeter-theme=kde
+# Each seat must start with "Seat:".
+# Uses settings from [SeatDefaults], any of these can be overriden by setting them in this section.
 #
-#[Seat0]
+#[Seat:0]
 
 #
 # Guest account configuration
