@@ -795,13 +795,12 @@ main (int argc, char **argv)
             g_printerr ("Failed to load configuration from %s: %s\n", config_path, error->message);
             exit (EXIT_FAILURE);
         }
-
-        /* Add in some default configuration */
-        config_set_string (config_get_instance (), "LightDM", "seats", "seat-0");
     }
     g_clear_error (&error);
 
     /* Set default values */
+    if (!config_has_key (config_get_instance (), "LightDM", "start-default-seat"))
+        config_set_boolean (config_get_instance (), "LightDM", "start-default-seat", TRUE);
     if (!config_has_key (config_get_instance (), "SeatDefaults", "type"))
         config_set_string (config_get_instance (), "SeatDefaults", "type", "xlocal");
     if (!config_has_key (config_get_instance (), "SeatDefaults", "xserver-command"))
