@@ -1,1 +1,2 @@
 [LightDM]
+start-default-seat=false
