@@ -1,3 +1,6 @@
+[LightDM]
+start-default-seat=false
+
 [XDMCPServer]
 enabled=true
 port=9999
