@@ -10,6 +10,9 @@ Overview of changes in lightdm 0.9.0
       - Major reorginisation of configuration to make it easier to configure and
         understand.  Users should set [SeatDefaults] section with settings for
         all seats, and can override each setting in a per seat configuration.
+      - Default seats are now specified using a [Seat:<name>] section.  If no seats
+        are specified then one is started.  This can be overridden by setting
+        start-default-seat=false in [LightDM].
       - Support setting autologin user to guest account
       - Split the user accounts configuration into /etc/lightdm/users.conf so the
         main config can be private.
